# luanti-agent

./: .gitignore  API.md  Dockerfile  IMPLEMENTATION.md  LICENSE  Makefile  NEW_FEATURES.md  QUICKSTART.md  README.md  bot_server.py  docker-compose.yml  docker-entrypoint.sh
.github/ISSUE_TEMPLATE/: feature_request.md
agent/: Dockerfile  README.md  agent_client.py  bot_server_fastapi.py  example_control_loop.py  example_new_features.py  pyproject.toml  requirements.server.txt  test_agent_client.py
config/: minetest.conf  minetest.conf.template  world.mt  world.mt.template
data/: debug.txt  minetest.conf
data/main-config/: minetest.conf
data/mods/python_bot/: init.lua  mod.conf
data/worlds/world/: auth.sqlite  env_meta.txt  map.sqlite  map_meta.txt  mod_storage.sqlite  players.sqlite  world.mt
docs/: execution-environment.md
mods/agent_api/: README.md  init.lua  mod.conf
mods/player_api/: init.lua  mod.conf
scripts/: download-games.sh  download-mods.sh  init-world.sh  lsio-init-world.sh
