[project]
name = "agent"
version = "0.1.0"
description = "Luanti AI Agent - Python client for agent control and observation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
